--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_BASE_URL=http://192.168.68.51:5000/api
+EXPO_PUBLIC_BASE_URL=http://192.168.68.51:5000/
+EXPO_PUBLIC_API_URL=http://192.168.68.51:5000/api
