--- a/app.json
+++ b/app.json
@@ -18,7 +18,8 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.sayel111.sanmochatappreactnative"
+      "package": "com.sayel111.sanmochatappreactnative",
+      "softwareKeyboardLayoutMode": "pan"
     },
     "web": {
       "output": "static",
